--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "third_party/nghttp3"]
 	path = third_party/nghttp3
 	url = https://github.com/ngtcp2/nghttp3.git
+[submodule "third_party/quictls_openssl"]
+	path = third_party/quictls_openssl
+	url = https://github.com/quictls/openssl.git
